# MedIM

./: .flake8  .gitignore  .lfsconfig  README.md  clean_code.ps1  pyproject.toml  test.ps1  test.py  test_medim.py
doc/: how_to_contribute.md
examples/: quick_start.py  quick_start_for_SAM_Med3d.py  quick_start_for_STU_Net.py
examples/utils/: pickle_load.py
medim/: __init__.py
medim/models/: __init__.py  _factory.py  _hf_utils.py  _hflinks.py  _pretrain.py  _registry.py  sam_med3d.py  stu_net.py  stunet.py
tests/: test_load_with_dataset.py  test_pytest.py  test_stunet.py
tests/data/: small_ep4k.model
