[project]
name = "medim"
version = "0.1.0.dev2"
requires-python = ">=3.9"
description = "medim is a all-in-one tool for medical image segmentation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Haoyu Wang", email = "small_dark@sina.com"},
]
dependencies = [
    "appdirs",
    "numpy<2",
    "torch>=2.1.2",
    "einops",
    "huggingface_hub",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/uni-medical/Pytorch-Medical-Image-Models"

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''
